@@ -1,4 +1,4 @@
-MANIFEST for ded, version t19951021
+MANIFEST for ded, version t19951029
 --------------------------------------------------------------------------------
 MANIFEST                        this file
 COPYING                         copyright notice for DED
